# simple_interpreter

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  lexer.hpp  main.cpp  parser.cpp  test.cpp
src/: main.cpp  parser.cpp
test/: test.cpp
